--- a/libs/container/feature-layout/src/lib/components/layout/layout.component.scss
+++ b/libs/container/feature-layout/src/lib/components/layout/layout.component.scss
@@ -2,12 +2,12 @@
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-rows: 1.5rem 1fr 10rem 1.5rem;
-  grid-template-columns: 1.5rem 10rem 1fr 10rem 1.5rem;
+  grid-template-rows: 1.5rem 1fr 0 1.5rem;
+  grid-template-columns: 1.5rem 0 1fr 0 1.5rem;
   grid-template-areas:
   'top top top top top'
-  'left sidebar-left content sidebar-right right'
-  'sidebar-bottom sidebar-bottom sidebar-bottom sidebar-bottom sidebar-bottom'
+  'left content-left content content-right right'
+  'left content-bottom content-bottom content-bottom right'
   'bottom bottom bottom bottom bottom';
 }
 
@@ -30,10 +30,10 @@
   writing-mode: vertical-rl;
 }
 
-.sidebar-left {
+.content-left {
   width: 100%;
   height: 100%;
-  grid-area: sidebar-left;
+  grid-area: content-left;
   background: var(--contentBg);
   border: 1px solid var(--containerBg);
   border-top: none;
@@ -51,10 +51,10 @@
   writing-mode: vertical-rl;
 }
 
-.sidebar-right {
+.content-right {
   width: 100%;
   height: 100%;
-  grid-area: sidebar-right;
+  grid-area: content-right;
   background: var(--contentBg);
   border: 1px solid var(--containerBg);
   border-top: none;
@@ -69,15 +69,15 @@
   border: 1px solid var(--containerBg);
 }
 
-.sidebar-bottom {
+.content-bottom {
   width: 100%;
   height: 100%;
-  grid-area: sidebar-bottom;
+  grid-area: content-bottom;
   background: var(--contentBg);
   border: 1px solid var(--containerBg);
 }
 
-.content {
+.content-main {
   width: 100%;
   height: 100%;
   grid-area: content;
