--- a/libs/shared/scss/theme/palettes/default/_default-accent.scss
+++ b/libs/shared/scss/theme/palettes/default/_default-accent.scss
@@ -1,32 +1,32 @@
 $default-accent: (
-  50: #fff9e0,
-  100: #fff0b3,
-  200: #ffe680,
-  300: #ffdb4d,
-  400: #ffd426,
-  500: #ffcc00,
-  600: #ffc700,
-  700: #ffc000,
-  800: #ffb900,
-  900: #ffad00,
-  A100: #ffffff,
-  A200: #fffaf2,
-  A400: #ffe8bf,
-  A700: #ffdfa6,
+  50 : #e0f0ff,
+  100 : #b3daff,
+  200 : #80c2ff,
+  300 : #4daaff,
+  400 : #2697ff,
+  500 : #0085ff,
+  600 : #007dff,
+  700 : #0072ff,
+  800 : #0068ff,
+  900 : #0055ff,
+  A100 : #ffffff,
+  A200 : #f2f6ff,
+  A400 : #bfd1ff,
+  A700 : #a6beff,
   contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #000000,
-    500: #000000,
-    600: #000000,
-    700: #000000,
-    800: #000000,
-    900: #000000,
-    A100: #000000,
-    A200: #000000,
-    A400: #000000,
-    A700: #000000,
-  ),
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
 );
