--- a/libs/shared/scss/theme/palettes/default/_default-primary.scss
+++ b/libs/shared/scss/theme/palettes/default/_default-primary.scss
@@ -1,32 +1,32 @@
 $default-primary: (
-  50: #e0f5f5,
-  100: #b3e7e7,
-  200: #80d7d7,
-  300: #4dc7c6,
-  400: #26bbba,
-  500: #00afae,
-  600: #00a8a7,
-  700: #009f9d,
-  800: #009694,
-  900: #008684,
-  A100: #b3fffe,
-  A200: #80fffd,
-  A400: #4dfffc,
-  A700: #33fffc,
+  50 : #ffebe0,
+  100 : #ffceb3,
+  200 : #ffae80,
+  300 : #ff8d4d,
+  400 : #ff7426,
+  500 : #ff5c00,
+  600 : #ff5400,
+  700 : #ff4a00,
+  800 : #ff4100,
+  900 : #ff3000,
+  A100 : #ffffff,
+  A200 : #fff4f2,
+  A400 : #ffc8bf,
+  A700 : #ffb1a6,
   contrast: (
-    50: #000000,
-    100: #e1e1e1,
-    200: #646464,
-    300: #000000,
-    400: #000000,
-    500: #ffffff,
-    600: #ffffff,
-    700: #ffffff,
-    800: #ffffff,
-    900: #ffffff,
-    A100: #000000,
-    A200: #000000,
-    A400: #000000,
-    A700: #000000,
-  ),
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
 );
