--- a/libs/container/feature-layout/src/lib/components/landing/landing.component.html
+++ b/libs/container/feature-layout/src/lib/components/landing/landing.component.html
@@ -1,8 +1,12 @@
 <ng-container *ngIf="scribeData | async as data">
   <div class="w-100 h-100 flex-center flex-column">
-    <ng-container *ngIf="!data?.manuscript">
+    <ng-container *ngIf="!data?.manuscript; else landing">
       <h1>Please create a manuscript to get started</h1>
       <a mat-raised-button color="primary" (click)="createManuscript()">Create Manuscript</a>
     </ng-container>
+    <ng-template #landing>
+      <h1>Welcome to ScribeNG</h1>
+      <p>Choose a scene in the left panel to start writing</p>
+    </ng-template>
   </div>
 </ng-container>
