--- a/libs/shared/scss/variables/_variable-mapping.scss
+++ b/libs/shared/scss/variables/_variable-mapping.scss
@@ -14,9 +14,9 @@ $warn: map-get(default-warn.$default-warn, 500);
   --primaryText: #{$primaryText};
   --text: #cecece;
   --mutedText: #646464;
-  --contentBg: #262b33;
-  --menuBg: #2f343f;
-  --containerBg: #383f4c;
+  --contentBg: #262B33;
+  --containerBg: #2F343F;
+  --border: #586172;
 }
 
 body {
