--- a/libs/container/feature-layout/src/lib/components/tabs/tabs.component.scss
+++ b/libs/container/feature-layout/src/lib/components/tabs/tabs.component.scss
@@ -1,8 +1,8 @@
 .toolbar {
   width: 100%;
   height: 2rem;
-  background: var(--menuBg);
-  border-bottom: 1px solid var(--containerBg);
+  background: var(--containerBg);
+  border-bottom: 1px solid var(--border);
 }
 
 .content-tabs {
@@ -21,7 +21,7 @@
   align-items: center;
   width: max-content;
   height: 100%;
-  border-right: 1px solid var(--containerBg);
+  border-right: 1px solid var(--border);
   padding: 0 .5rem;
   border-bottom: 4px solid transparent;
 }
