--- a/libs/shared/scss/variables/_variable-mapping.scss
+++ b/libs/shared/scss/variables/_variable-mapping.scss
@@ -26,3 +26,7 @@ body {
 .default .mat-menu-panel {
   background: var(--containerBg);
 }
+
+.default .mat-dialog-container {
+  background: var(--containerBg);
+}
