--- a/libs/scribe/feature-files/src/lib/components/file-tree/file-tree.component.scss
+++ b/libs/scribe/feature-files/src/lib/components/file-tree/file-tree.component.scss
@@ -9,16 +9,14 @@
 .chapter-details, .scene {
   width: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   cursor: pointer;
 }
 
-.chapter-details {
-  justify-content: space-between;
-}
-
 .scene {
-  margin: .25rem 0 .25rem 2.2rem;
-  align-items: flex-end;
+  padding: .25rem 0 .25rem 2.2rem;
+  &:hover {
+    background: var(--containerBg);
+  }
 }
