--- a/libs/shared/scss/partials/_buttons.scss
+++ b/libs/shared/scss/partials/_buttons.scss
@@ -52,6 +52,24 @@
   }
 }
 
+.icon-xl {
+  transform: scale(2);
+}
+
+button.icon-button-xl {
+  width: 60px;
+  height: 60px;
+}
+
+.icon-lrg {
+  transform: scale(1.5);
+}
+
+button.icon-button-lrg {
+  width: 50px;
+  height: 50px;
+}
+
 .icon-sm {
   transform: scale(.5);
 }
