--- a/libs/scribe/feature-files/src/lib/components/file-tree/file-tree.component.html
+++ b/libs/scribe/feature-files/src/lib/components/file-tree/file-tree.component.html
@@ -1,3 +1,19 @@
+<div class="toolbar flex-between pl-2">
+  <p class="m-0">Manuscript</p>
+  <div class="actions">
+    <button class="icon-button-sm flex-center" mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon class="icon-sm">more_vert</mat-icon>
+    </button>
+    <button class="icon-button-sm flex-center" mat-icon-button (click)="togglePanel('contentLeft')">
+      <mat-icon class="icon-sm">remove</mat-icon>
+    </button>
+  </div>
+  <mat-menu #menu>
+    <button mat-menu-item>Manuscript details</button>
+    <button mat-menu-item>New Chapter</button>
+    <button mat-menu-item>New Scene</button>
+  </mat-menu>
+</div>
 <ng-container *ngIf="files$ | async as chapters">
   <ng-container *ngFor="let chapter of chapters">
     <button class="chapter" (click)="toggleChapter(chapter)">
